<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/vacancies"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_nav_search" />

    <item
        android:id="@+id/favorites_vacancies"
        android:icon="@drawable/ic_favourites"
        android:title="@string/bottom_nav_favourites" />

    <item
        android:id="@+id/responses"
        android:icon="@drawable/ic_responses"
        android:title="@string/bottom_nav_responses"/>

    <item
        android:id="@+id/messages"
        android:title="@string/bottom_nav_messages"
        android:icon="@drawable/ic_messages"/>

    <item
        android:id="@+id/profile"
        android:title="@string/bottom_nav_profile"
        android:icon="@drawable/ic_profile"/>

</menu>