<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.verify_code.VerifyCodeFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/verify_code_email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code_send_code_on"
        style="@style/ScreenTitle"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacer_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code_text"
        style="@style/screen_subtitle"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacer_16"/>

    <include layout="@layout/view_verify_code_cells" android:id="@+id/verify_code_cells_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="@dimen/spacer_16"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/verify_code_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SystemButton"
        android:text="@string/enter_code_confirm"/>

</LinearLayout>