<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_job_linear_layout"
    style="@style/Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacer_16"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sign_in_search_job_text_view"
        style="@style/screen_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_24"
        android:layout_marginBottom="@dimen/spacer_16"
        android:text="@string/sing_in_subtitle_job_search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_email_text_input_layout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:cursorColor="@color/white"
        app:endIconDrawable="@drawable/ic_cross"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:hintEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        style="@style/ErrorText"
        app:helperTextTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sing_in_email_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacer_16"
            android:hint="@string/sing_in_text_view_hint_email_or_phone_number"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacer_24"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sing_in_continue_button"
            style="@style/SystemButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/sing_in_button_continue" />

        <Space
            android:layout_width="@dimen/spacer_24"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sing_in_with_password_button"
            style="@style/auth_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:includeFontPadding="false"
            android:text="@string/sing_in_button_continue_with_password" />

    </LinearLayout>

</LinearLayout>