<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_recycler_view_without_offers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/vacancies_search_edit_text"
        style="@style/TextInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_10"
        android:layout_marginEnd="@dimen/spacer_10"
        android:drawableStart="@drawable/ic_left_arrow"
        android:drawablePadding="@dimen/spacer_8"
        android:hint="@string/position_suitable_vacancies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/EditText"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@+id/vacancies_search_edit_text"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vacancies_search_edit_text" />

    <TextView
        android:id="@+id/count_vacancies_text_view"
        style="@style/OrdinaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacer_16"
        android:text="@string/count_vacancies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacancies_search_edit_text"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/filter_text_view"
        style="@style/FilterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacer_16"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/spacer_8"
        android:text="@string/filter_vacancies"
        app:layout_constraintBottom_toBottomOf="@+id/sort_arrow"
        app:layout_constraintEnd_toStartOf="@+id/sort_arrow"
        app:layout_constraintTop_toBottomOf="@+id/vacancies_search_edit_text"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/sort_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacer_16"
        android:src="@drawable/ic_accordance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>